--- a/index.html
+++ b/index.html
@@ -1,81 +1,113 @@
-Primeira página com github
-<STYLE>
-  
- .container{           /*Essa classe é a que faz o menu centralizar*/
-   margin:auto;
-   width:960px;
-   height:auto;
-}
- 
- #menu {
-    margin-left:0px;
-    width:100%;
-    height:20px;
-    margin-top:7px;
-    position:absolute;
+<!DOCTYPE html>
+<html lang="pt-br">
+	<head>
+		<meta charset="UTF-8">
+		<title>Aparecida Nutrição</title>
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<link rel="stylesheet" type="text/css" href="css/reset.css">
+		<link rel="stylesheet" type="text/css" href="css/index.css">
 
+	</head>
+	<body>
 
-}
-#menu1 {            /*Essa div é o tamanho principal do menu e cor de fundo*/
+		<header>
+			<div class="container">
+				<h2 class="titulo">Aparecida Nutrição</h2>
+			</div>
+		</header>
+		<main>
+			<section class="container">
+				<h2>Meus pacientes</h2>
+				<label for="filtrar-tabela">Filtre:</label>
+				<input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite o nome do paciente">
+				<table>
+					<thead>
+						<tr>
+							<th>Nome</th>
+							<th>Peso(kg)</th>
+							<th>Altura(m)</th>
+							<th>Gordura Corporal(%)</th>
+							<th>IMC</th>
+						</tr>
+					</thead>
+					<tbody id="tabela-pacientes">
+						<tr class="paciente" id="primeiro-paciente">
+							<td class="info-nome">Paulo</td>
+							<td class="info-peso">100</td>
+							<td class="info-altura">2.00</td>
+							<td class="info-gordura">10</td>
+							<td class="info-imc">0</td>
+						</tr>
 
-    width:70%;
-    height:48px;
-    margin-top:-6px;
-    position:relative;
-    background: rgb(51, 51, 51);
-    border-radius: 0px 0px 15px 15px;
-}
-#menuver {                      
-    border: 0px;
-    margin: 0px;
-    padding-left: inherit;	
-	
-}
-#menuver li {                         
-    list-style: none;
-    margin: 0;
-    display: inline;
-    margin: 0px;
-    font: 16px Calibri;
-	
-      
-}
-#menuver li a {                               /*Essa div para diversos navegadores*/
-    -moz-border-radius: 5px;   /*Firefox*/
-    -webkit-border-radius: 5px;   /* Chrome e Safari */
-    border-radius:0px;
-    padding: 10px 37.2px;/*LARGURA E TAMANHANO MENU*/
-    float:left;
-    margin: 0;
- 
-    
-    text-decoration: none;
-    color:#FFB90F;
-	
-}/*COR LETRA MENU PRINCIPAL*/
-#menuver li a:link {
-    color:#8B0000;
-}
-#menuhor li a:visited {
-    color:#8B0000;
-}
-#menuver li a:hover {
-    background:#FFB90F;    
-	height:27px;
-	 border-radius: 0px 0px 15px 15px;
-    color:blue;/*COR LETRA FUNDO*/
- 
- </STYLE>
- <div class="container">
- <div id="menu1"> <!-- MENU  -->
-            <div id="menu">
-                <ul id="menuver">
-                    <li><a href="index.html"    title="Pagina Inicial">Inicio</a> </li>
-                    <li><a href="01.html" title="Confira nossa Programacao">Programacao</a></li>
-                    <li><a href="02.html" title="Locutores">Equipe</a></li>
-                    <li><a href="03.html" title="Sala de Bate Papo">Chat</a></li>
-                    <li><a href="04.html" title="Fotos">Galerias</a></li>                  
-                </ul>
-            </div>
-        </div>
-		  </div>
+						<tr class="paciente" >
+							<td class="info-nome">João</td>
+							<td class="info-peso">80</td>
+							<td class="info-altura">1.72</td>
+							<td class="info-gordura">40</td>
+							<td class="info-imc">0</td>
+						</tr>
+
+						<tr class="paciente" >
+							<td class="info-nome">Erica</td>
+							<td class="info-peso">54</td>
+							<td class="info-altura">1.64</td>
+							<td class="info-gordura">14</td>
+							<td class="info-imc">0</td>
+						</tr>
+
+						<tr class="paciente">
+							<td class="info-nome">Douglas</td>
+							<td class="info-peso">85</td>
+							<td class="info-altura">1.73</td>
+							<td class="info-gordura">24</td>
+							<td class="info-imc">0</td>
+						</tr>
+						<tr class="paciente" >
+							<td class="info-nome">Tatiana</td>
+							<td class="info-peso">46</td>
+							<td class="info-altura">1.55</td>
+							<td class="info-gordura">19</td>
+							<td class="info-imc">0</td>
+						</tr>
+					</tbody>
+				</table>
+				<span id="erro-ajax" class="invisivel">Erro ao buscar os pacientes</span>
+
+				<button id="buscar-pacientes" class="botao bto-principal">Buscar Pacientes</button>
+
+			</section>
+		</main>
+
+		<section class="container">
+		    <h2 id="titulo-form">Adicionar novo paciente</h2>
+			<ul id="mensagens-erro"></ul>
+		    <form id="form-adiciona">
+		        <div class="">
+		            <label for="nome">Nome:</label>
+		            <input id="nome" name="nome" type="text" placeholder="digite o nome do seu paciente" class="campo">
+		        </div>
+		        <div class="grupo">
+		            <label for="peso">Peso:</label>
+		            <input id="peso" name="peso" type="text" placeholder="digite o peso do seu paciente" class="campo campo-medio">
+		        </div>
+		        <div class="grupo">
+		            <label for="altura">Altura:</label>
+		            <input id="altura" name="altura" type="text" placeholder="digite a altura do seu paciente" class="campo campo-medio">
+		        </div>
+		        <div class="grupo">
+		            <label for="gordura">% de Gordura:</label>
+		            <input id="gordura" type="text" placeholder="digite a porcentagem de gordura do seu paciente" class="campo campo-medio">
+		        </div>
+
+		        <button id="adicionar-paciente" class="botao bto-principal">Adicionar</button>
+		    </form>
+		</section>
+
+		<script src="js/calcula-imc.js" ></script>
+		<script src="js/form.js" ></script>
+		<script src="js/remover-paciente.js" ></script>
+		<script src="js/filtra.js" ></script>
+		<script src="js/buscar-pacientes.js" ></script>
+
+	</body>
+</html>
