--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 		<header>
 			<div class="container">
-				<h2 class="titulo">Moacir Nutrição</h2>
+				<h2 class="titulo">Moacir </h2>
 			</div>
 		</header>
 		<main>
